plugins {
    id 'java'
    id 'java-library'
}

group = 'be.yvanmazy'
version = '1.0'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

repositories {
    mavenCentral()
}

dependencies {
    api 'com.google.code.gson:gson:2.11.0'
    api 'org.slf4j:slf4j-api:2.0.16'
    api 'org.jetbrains:annotations:26.0.1'

    testImplementation platform('org.junit:junit-bom:5.10.3')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
}